# eye-tracking

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
src/: main.c
src/camera/: ov7670.c  ov7670.h
src/eye_tracking/: eye_tracking.c  eye_tracking.h
src/hal/: gpio.h  i2c.h  timer.h  uart.c  uart.h
src/image_proc/: image_proc.c  image_proc.h
tests/: test_eye_tracking.c  test_image_proc.c  unity.h
